Fix playlist name text overflow

--- a/src/styles/Playlist.module.css
+++ b/src/styles/Playlist.module.css
@@ -17,21 +17,25 @@
   box-shadow: var(--shadow);
   padding-inline: 10px;
   z-index: 5;
-  overflow: hidden;
   box-sizing: border-box;
   font-size: 16px;
   gap: 2px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .titleName {
   font-size: 18px;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .titleChannel {
   color: var(--color4);
   font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 @media (min-width: 960px) {
